--- a/src/Legate/Legate.csproj
+++ b/src/Legate/Legate.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <LangVersion>9.0</LangVersion>
+    <nullable>enable</nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -9,6 +11,7 @@
     <PackageReference Include="NLog" Version="4.7.6" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.10.0" />
     <PackageReference Include="Lamar.Microsoft.DependencyInjection" Version="5.0.0" />
+    <PackageReference Include="KubernetesClient" Version="4.0.3" />
   </ItemGroup>
 
 </Project>
