--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,8 +25,8 @@ jobs:
         {
             $version = "0.0.1"
         }
-        Write-Host "Detected version: '$version'."
-        Write-Host "BUILD_VERSION=$version" > $env:GITHUB_ENV
+        Write-Output "Detected version: '$version'."
+        Write-Output "BUILD_VERSION=$version" >> $env:GITHUB_ENV
       shell: pwsh
 
     - name: Build
