--- a/src/Legate/Legate.csproj
+++ b/src/Legate/Legate.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="KubernetesClient" Version="4.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\vendor\consuldotnet\Consul\Consul.csproj" />
+  </ItemGroup>
+
 </Project>
