--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -51,5 +51,5 @@ jobs:
         repository: silvenga/legate
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        tag: latest
+        tags: latest
         build_args: BUILD_VERSION=${{ env.BUILD_VERSION }}
